--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="background-circle"></div>
             <header class="main-header">
                 <a href="#home" class="logo">
-                    <img src="assets/logo.png" alt="Transporte Lira Logo" />
+                    <img src="assets/images/logo.png" alt="Transporte Lira Logo" />
                 </a>
                 <nav class="navigation">
                     <ul>
@@ -42,7 +42,7 @@
                        target="_blank" class="btn primary">ENTRE EM CONTATO</a>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/Volkswagen 15.180.png" alt="Caminhão Volkswagen 15.180" class="main-truck-img" />
+                    <img src="assets/images/Volkswagen 15.180.png" alt="Caminhão Volkswagen 15.180" class="main-truck-img" />
                 </div>
             </div>
 
@@ -50,12 +50,12 @@
                 <li>
                     <a href="https://api.whatsapp.com/send?phone=5521994947112&text=Ol%C3%A1,%20tudo%20bem?"
                        target="_blank">
-                        <img src="assets/whatsapp.png" alt="WhatsApp" />
+                        <img src="assets/images/whatsapp.png" alt="WhatsApp" />
                     </a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/transportelira_/" target="_blank">
-                        <img src="assets/Insta.png" alt="Instagram" />
+                        <img src="assets/images/Insta.png" alt="Instagram" />
                     </a>
                 </li>
             </ul>
@@ -110,9 +110,9 @@
                         </div>
                     </div>
 
-                    <div class="packaging-">
-                        <img src="assets/embalagem02.jpeg" alt="Embalagem de Proteção" />
-                        <img src="assets/embalagem01.jpeg" alt="Embalagem Qualificada" />
+                    <div class="packaging-images">
+                        <img src="assets/images/embalagem02.jpeg" alt="Embalagem de Proteção" />
+                        <img src="assets/images/embalagem01.jpeg" alt="Embalagem Qualificada" />
                     </div>
                 </div>
 
@@ -129,22 +129,22 @@
                         <div class="carousel-container">
                             <div class="carousel-slides">
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços01.PNG" alt="Serviço 1" />
+                                    <img src="assets/images/Serviços01.PNG" alt="Serviço 1" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços02.PNG" alt="Serviço 2" />
+                                    <img src="assets/images/Serviços02.PNG" alt="Serviço 2" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços03.PNG" alt="Serviço 3" />
+                                    <img src="assets/images/Serviços03.PNG" alt="Serviço 3" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços04.PNG" alt="Serviço 4" />
+                                    <img src="assets/images/Serviços04.PNG" alt="Serviço 4" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços05.PNG" alt="Serviço 5" />
+                                    <img src="assets/images/Serviços05.PNG" alt="Serviço 5" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços06.PNG" alt="Serviço 6" />
+                                    <img src="assets/images/Serviços06.PNG" alt="Serviço 6" />
                                 </div>
                             </div>
                             <div class="carousel-controls">
@@ -170,7 +170,7 @@
                 <h2 class="section-title">Nossa Frota</h2>
 
                 <div class="vehicle-card">
-                    <img src="assets/sprinter.png" alt="Mercedes Benz - Sprinter" />
+                    <img src="assets/images/sprinter.png" alt="Mercedes Benz - Sprinter" />
                     <h3>Sprinter - Mercedes Benz</h3>
                     <p>
                         <b>Espaço de Carga Ampla:</b> A Sprinter é conhecida por sua
@@ -201,7 +201,7 @@
                 </div>
 
                 <div class="vehicle-card">
-                    <img src="assets/Volkswagen 15.180.png" alt="Volkswagen - 15.180" />
+                    <img src="assets/images/Volkswagen 15.180.png" alt="Volkswagen - 15.180" />
                     <h3>Volkswagen 15.180</h3>
                     <p>
                         <b>Capacidade de Carga Média a Pesada:</b> O Volkswagen 15.180 é
@@ -227,7 +227,7 @@
                 <div class="about-card-grid">
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Fundação e experiência.png" alt="Fundação e experiência Ícone" />
+                            <img src="assets/images/Fundação e experiência.png" alt="Fundação e experiência Ícone" />
                         </div>
                         <p>
                             <b>Fundação e experiência:</b> A Transporte Lira tem uma
@@ -238,7 +238,7 @@
                     </div>
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Abrangência geográfica.png" alt="Abrangência geográfica Ícone" />
+                            <img src="assets/images/Abrangência geográfica.png" alt="Abrangência geográfica Ícone" />
                         </div>
                         <p>
                             <b>Abrangência geográfica:</b> A empresa atua tanto no estado do
@@ -249,7 +249,7 @@
                     </div>
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Qualidade e eficiência.png" alt="Qualidade e eficiência Ícone" />
+                            <img src="assets/images/Qualidade e eficiência.png" alt="Qualidade e eficiência Ícone" />
                         </div>
                         <p>
                             <b>Qualidade e eficiência:</b> A Transporte Lira coloca ênfase na
@@ -260,7 +260,7 @@
                     </div>
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Serviços personalizados.png" alt="Serviços personalizados Ícone" />
+                            <img src="assets/images/Serviços personalizados.png" alt="Serviços personalizados Ícone" />
                         </div>
                         <p>
                             <b>Serviços personalizados:</b> A empresa busca adaptar seus
@@ -272,7 +272,7 @@
                     </div>
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Compromisso com a satisfação do cliente.png" alt="Compromisso com a satisfação do cliente Ícone" />
+                            <img src="assets/images/Compromisso com a satisfação do cliente.png" alt="Compromisso com a satisfação do cliente Ícone" />
                         </div>
                         <p>
                             <b>Compromisso com a satisfação do cliente:</b> A satisfação do
@@ -295,7 +295,7 @@
                         diretamente com a empresa para obter informações detalhadas sobre
                         seus serviços, preços e disponibilidade.
                     </p>
-                    <img class="featured-image" src="assets/Sprint - Teresópilis.jpeg" alt="Sprint em Teresópolis" />
+                    <img class="featured-image" src="assets/images/Sprint - Teresópilis.jpeg" alt="Sprint em Teresópolis" />
                 </div>
             </div>
         </section>
@@ -323,5 +323,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
