--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="background-circle"></div>
             <header class="main-header">
                 <a href="#home" class="logo">
-                    <img src="assets/logo.png" alt="Transporte Lira Logo" />
+                    <img src="assets/LOGO.PNG" alt="Transporte Lira Logo" />
                 </a>
                 <nav class="navigation">
                     <ul>
@@ -324,4 +324,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
