--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li>
                     <a href="https://api.whatsapp.com/send?phone=5521994947112&text=Ol%C3%A1,%20tudo%20bem?"
                        target="_blank">
-                        <img src="assets/whatsapp.png" alt="WhatsApp" />
+                        <img src="assets/WhatsApp.png" alt="WhatsApp" />
                     </a>
                 </li>
                 <li>
@@ -170,7 +170,7 @@
                 <h2 class="section-title">Nossa Frota</h2>
 
                 <div class="vehicle-card">
-                    <img src="assets/sprinter.png" alt="Mercedes Benz - Sprinter" />
+                    <img src="assets/Sprinter.png" alt="Mercedes Benz - Sprinter" />
                     <h3>Sprinter - Mercedes Benz</h3>
                     <p>
                         <b>Espaço de Carga Ampla:</b> A Sprinter é conhecida por sua
@@ -324,5 +324,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
