--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TRANSPORTE LIRA</title>
     <link rel="stylesheet" href="style.css" />
-    </head>
+</head>
 <body>
     <main>
         <section class="hero-section" id="home">
             <div class="background-circle"></div>
             <header class="main-header">
                 <a href="#home" class="logo">
-                    <img src="assets/LOGO.PNG" alt="Transporte Lira Logo" />
+                    <img src="assets/images/logo.png" alt="Transporte Lira Logo" />
                 </a>
                 <nav class="navigation">
                     <ul>
@@ -29,7 +29,6 @@
                     <span></span>
                 </div>
             </header>
-
             <div class="hero-content">
                 <div class="text-content">
                     <h2>TRANSPORTE <br /><span>LIRA</span></h2>
@@ -42,20 +41,23 @@
                        target="_blank" class="btn primary">ENTRE EM CONTATO</a>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/Volkswagen 15.180.png" alt="Caminhão Volkswagen 15.180" class="main-truck-img" />
+                    <img src="assets/images/Volkswagen 15.180.png" 
+                         srcset="assets/images/Volkswagen 15.180_small.png 500w,
+                                 assets/images/Volkswagen 15.180.png 1000w"
+                         sizes="(max-width: 600px) 500px, 1000px"
+                         alt="Caminhão Volkswagen 15.180" 
+                         class="main-truck-img" />
                 </div>
             </div>
-
             <ul class="social-icons">
                 <li>
-                    <a href="https://api.whatsapp.com/send?phone=5521994947112&text=Ol%C3%A1,%20tudo%20bem?"
-                       target="_blank">
-                        <img src="assets/WhatsApp.png" alt="WhatsApp" />
+                    <a href="https://api.whatsapp.com/send?phone=5521994947112&text=Ol%C3%A1,%20tudo%20bem?" target="_blank">
+                        <img src="assets/images/whatsapp.png" alt="WhatsApp" />
                     </a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/transportelira_/" target="_blank">
-                        <img src="assets/Insta.png" alt="Instagram" />
+                        <img src="assets/images/Insta.png" alt="Instagram" />
                     </a>
                 </li>
             </ul>
@@ -77,7 +79,6 @@
                         desembalagem de todo material.
                     </p>
                     <p>Aqui estão alguns dos ganhos de uma embalagem qualificada em um serviço realizado pela Transporte Lira:</p>
-
                     <div class="packaging-benefits-grid">
                         <div class="benefit-card">
                             <h4 class="card-title">Proteção dos itens</h4>
@@ -109,10 +110,9 @@
                             </p>
                         </div>
                     </div>
-
                     <div class="packaging-images">
-                        <img src="assets/embalagem02.jpeg" alt="Embalagem de Proteção" />
-                        <img src="assets/embalagem01.jpeg" alt="Embalagem Qualificada" />
+                        <img src="assets/images/embalagem02.jpeg" alt="Embalagem de Proteção" />
+                        <img src="assets/images/embalagem01.jpeg" alt="Embalagem Qualificada" />
                     </div>
                 </div>
 
@@ -121,7 +121,7 @@
                     <p>
                         Nossos serviços são projetados para atender às necessidades de
                         cada cliente, que precisam mover suas mercadorias, pertences e até
-                        mesmos seus sonhos. Seja dentro da mesma cidade ou entre cidades.
+                        mesmo seus sonhos. Seja dentro da mesma cidade ou entre cidades.
                     </p>
                     <p>Abaixo estão alguns dos serviços realizados por nossas empresas:</p>
 
@@ -129,22 +129,22 @@
                         <div class="carousel-container">
                             <div class="carousel-slides">
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços01.PNG" alt="Serviço 1" />
+                                    <img src="assets/images/Serviços01.PNG" alt="Serviço 1" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços02.PNG" alt="Serviço 2" />
+                                    <img src="assets/images/Serviços02.PNG" alt="Serviço 2" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços03.PNG" alt="Serviço 3" />
+                                    <img src="assets/images/Serviços03.PNG" alt="Serviço 3" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços04.PNG" alt="Serviço 4" />
+                                    <img src="assets/images/Serviços04.PNG" alt="Serviço 4" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços05.PNG" alt="Serviço 5" />
+                                    <img src="assets/images/Serviços05.PNG" alt="Serviço 5" />
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="assets/Serviços06.PNG" alt="Serviço 6" />
+                                    <img src="assets/images/Serviços06.PNG" alt="Serviço 6" />
                                 </div>
                             </div>
                             <div class="carousel-controls">
@@ -168,9 +168,8 @@
         <section class="page-section" id="fleet">
             <div class="section-container">
                 <h2 class="section-title">Nossa Frota</h2>
-
                 <div class="vehicle-card">
-                    <img src="assets/Sprinter.png" alt="Mercedes Benz - Sprinter" />
+                    <img src="assets/images/sprinter.png" alt="Mercedes Benz - Sprinter" />
                     <h3>Sprinter - Mercedes Benz</h3>
                     <p>
                         <b>Espaço de Carga Ampla:</b> A Sprinter é conhecida por sua
@@ -199,9 +198,8 @@
                         locais de entrega apertados.
                     </p>
                 </div>
-
                 <div class="vehicle-card">
-                    <img src="assets/Volkswagen 15.180.png" alt="Volkswagen - 15.180" />
+                    <img src="assets/images/Volkswagen 15.180.png" alt="Volkswagen - 15.180" />
                     <h3>Volkswagen 15.180</h3>
                     <p>
                         <b>Capacidade de Carga Média a Pesada:</b> O Volkswagen 15.180 é
@@ -223,11 +221,10 @@
                     dentro do estado do Rio de Janeiro quanto em nível interestadual.
                     Abaixo, destacam-se alguns pontos relevantes sobre a empresa:
                 </p>
-
                 <div class="about-card-grid">
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Fundação e experiência.png" alt="Fundação e experiência Ícone" />
+                            <img src="assets/images/Fundação e experiência.png" alt="Fundação e experiência Ícone" />
                         </div>
                         <p>
                             <b>Fundação e experiência:</b> A Transporte Lira tem uma
@@ -238,7 +235,7 @@
                     </div>
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Abrangência geográfica.png" alt="Abrangência geográfica Ícone" />
+                            <img src="assets/images/Abrangência geográfica.png" alt="Abrangência geográfica Ícone" />
                         </div>
                         <p>
                             <b>Abrangência geográfica:</b> A empresa atua tanto no estado do
@@ -249,7 +246,7 @@
                     </div>
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Qualidade e eficiência.png" alt="Qualidade e eficiência Ícone" />
+                            <img src="assets/images/Qualidade e eficiência.png" alt="Qualidade e eficiência Ícone" />
                         </div>
                         <p>
                             <b>Qualidade e eficiência:</b> A Transporte Lira coloca ênfase na
@@ -260,7 +257,7 @@
                     </div>
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Serviços personalizados.png" alt="Serviços personalizados Ícone" />
+                            <img src="assets/images/Serviços personalizados.png" alt="Serviços personalizados Ícone" />
                         </div>
                         <p>
                             <b>Serviços personalizados:</b> A empresa busca adaptar seus
@@ -272,7 +269,7 @@
                     </div>
                     <div class="about-card">
                         <div class="icon-wrapper">
-                            <img src="assets/Compromisso com a satisfação do cliente.png" alt="Compromisso com a satisfação do cliente Ícone" />
+                            <img src="assets/images/Compromisso com a satisfação do cliente.png" alt="Compromisso com a satisfação do cliente Ícone" />
                         </div>
                         <p>
                             <b>Compromisso com a satisfação do cliente:</b> A satisfação do
@@ -283,7 +280,6 @@
                         </p>
                     </div>
                 </div>
-
                 <div class="about-final-text">
                     <p>
                         Em resumo, a Transporte Lira é uma empresa estabelecida no Rio de
@@ -295,7 +291,7 @@
                         diretamente com a empresa para obter informações detalhadas sobre
                         seus serviços, preços e disponibilidade.
                     </p>
-                    <img class="featured-image" src="assets/Sprint - Teresópilis.jpeg" alt="Sprint em Teresópolis" />
+                    <img class="featured-image" src="assets/images/Sprint - Teresópilis.jpeg" alt="Sprint em Teresópolis" />
                 </div>
             </div>
         </section>
@@ -324,6 +320,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
