--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="background-circle"></div>
             <header class="main-header">
                 <a href="#home" class="logo">
-                    <img src="assets/logo.png" alt="Transporte Lira Logo" />
+                    <img src="assets/LOGO.PNG" alt="Transporte Lira Logo" />
                 </a>
                 <nav class="navigation">
                     <ul>
@@ -52,7 +52,7 @@
             <ul class="social-icons">
                 <li>
                     <a href="https://api.whatsapp.com/send?phone=5521994947112&text=Ol%C3%A1,%20tudo%20bem?" target="_blank">
-                        <img src="assets/whatsapp.png" alt="WhatsApp" />
+                        <img src="assets/WhatsApp.png" alt="WhatsApp" />
                     </a>
                 </li>
                 <li>
@@ -111,8 +111,8 @@
                         </div>
                     </div>
                     <div class="packaging-images">
-                        <img src="assets/embalagem02.jpeg" alt="Embalagem de Proteção" />
-                        <img src="assets/embalagem01.jpeg" alt="Embalagem Qualificada" />
+                        <img src="assets/Embalagem02.jpeg" alt="Embalagem de Proteção" />
+                        <img src="assets/Embalagem01.jpeg" alt="Embalagem Qualificada" />
                     </div>
                 </div>
 
@@ -169,7 +169,7 @@
             <div class="section-container">
                 <h2 class="section-title">Nossa Frota</h2>
                 <div class="vehicle-card">
-                    <img src="assets/sprinter.png" alt="Mercedes Benz - Sprinter" />
+                    <img src="assets/Sprinter.png" alt="Mercedes Benz - Sprinter" />
                     <h3>Sprinter - Mercedes Benz</h3>
                     <p>
                         <b>Espaço de Carga Ampla:</b> A Sprinter é conhecida por sua
@@ -320,4 +320,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
