--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-content">
                     <h1 class="main-title">TRANSPORTE <br /><span>LIRA</span></h1>
                     <p>
-                        Com mais de 10 anos no mercado, a **TRANSPORTE LIRA** já realizou mais
+                        Com mais de 10 anos no mercado, a <b>TRANSPORTE LIRA</b> já realizou mais
                         de 4.000 fretes e mudanças em todo território brasileiro, sempre
                         buscando comprometimento com a satisfação de nossos clientes.
                     </p>
