--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="service-block">
-                    <h3>Serviços Realizados (Carrossel)</h3>
+                    <h3>Serviços Realizados</h3>
                     <p>
                         Nossos serviços são projetados para atender às necessidades de
                         cada cliente, que precisam mover suas mercadorias, pertences e até
@@ -324,5 +324,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
